--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <title>Document</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+</head>
 
-    <body> </body>
+<body>
+    <h1>Goodbye, World</h1>
+</body>
 
 </html>
